--- a/views/product/create.hbs
+++ b/views/product/create.hbs
@@ -86,7 +86,7 @@
           <div class="col-lg-3 select_input">
             <div class="form-group">
               <label for="review">Product Image</label>
-              <input type="file" name="product-image-cover" class="form-control" id="product"
+              <input type="file" name="image" class="form-control" id="product"
                 placeholder="Select" required="">
             </div>
           </div>
