some minor refactoring done

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -371,7 +371,7 @@
       </div>
     </div>
   </footer>
-  <div class="modal fade bd-example-modal-lg theme-modal cart-modal" id="addtocart" tabindex="-1" role="dialog"
+  {{!-- <div class="modal fade bd-example-modal-lg theme-modal cart-modal" id="addtocart" tabindex="-1" role="dialog"
     aria-hidden="true">
     <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
       <div class="modal-content">
@@ -477,7 +477,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> --}}
   <!-- Add to cart modal popup end-->
 
 
