--- a/views/product/add-to-cart.hbs
+++ b/views/product/add-to-cart.hbs
@@ -1,18 +1,45 @@
-<div class="media">
-  {{!-- <h6>
-    <i class="fa fa-check"></i>Item
-    <span>Items Count:{{cartItems.length}}</span>
-    <span> successfully added to your Cart</span>
-  </h6> --}}
-
-  <div class="buttons">
-    <a href="#" class="view-cart btn btn-solid">Your cart</a>
-    <a href="#" class="checkout btn btn-solid">Check out</a>
-    <a href="#" class="continue btn btn-solid">Continue shopping</a>
-  </div>
-
-  <div class="upsell_payment">
-    <img src="/assets/images/payment_cart.png" class="img-fluid blur-up lazyload" alt="">
+<div class="breadcrumb-section">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="page-title">
+          <h2>Create a Product</h2>
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <nav aria-label="breadcrumb" class="theme-breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="/">Home</a></li>
+            <li class="breadcrumb-item active">Login</li>
+          </ol>
+        </nav>
+      </div>
+    </div>
   </div>
 </div>
+<div class="">
+  <div class="media">
+    <a href="#">
+
+    </a>
+    <div class="media-body align-self-center text-center">
+      <a href="#">
+
+        <div class="mt-5 alert alert-success" role="alert" style="margin-left:35%; margin-right:35%">
+          <h4 class="alert-heading"><b><i class="fa fa-check"></i> Item Addedd!</b></h4>
+          <h5>
+            <span> Item successfully added to your Cart</span>
+          </h5>
+        </div>
+
+      </a>
+      <div class="buttons mb-5">
+        <a href="/product/view-cart" class="view-cart btn btn-solid">Your cart</a>
+        <a href="/order/checkout" class="checkout btn btn-solid mx-4">Check out</a>
+        <a href="/product" class="continue btn btn-solid">Continue shopping</a>
+      </div>
+
+
+    </div>
+  </div>
 </div>
