--- a/views/product/edit-product.hbs
+++ b/views/product/edit-product.hbs
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-sm-6">
         <div class="page-title">
-          <h2>Create a Product</h2>
+          <h2>Edit a Product</h2>
         </div>
       </div>
       <div class="col-sm-6">
@@ -52,7 +52,7 @@
             <div class="form-group">
               <label for="review">Product Dimension</label>
               <input type="text" name="dimension" class="form-control" id="review"
-                value="{{productByIdDB.dimension}}" required="">
+                value="{{productByIdDB.dimensions}}" required="">
             </div>
           </div>
           <div class="col-lg-2">
@@ -137,7 +137,7 @@
               {{!-- {{#if status}}
               <p>{{status}}</p>
               {{/if}} --}}
-              <button type="submit" class="btn btn-solid">CREATE</button>
+              <button type="submit" class="btn btn-solid">UPDATE</button>
               <button type="submit" class="btn btn-solid w-auto">Reset</button>
             </div>
           </div>
