--- a/views/auth/register.hbs
+++ b/views/auth/register.hbs
@@ -29,6 +29,16 @@
                                 <input type="password" name="password" class="form-control" id="review"
                                     placeholder="Enter your password" required>
                             </div>
+                            <div class="col-md-6">
+                                <label>address</label>
+                                <input type="text" name="address" class="form-control" id="lname"
+                                    placeholder="Address" required="">
+                            </div>
+                            <div class="col-md-6">
+                                <label>phoneNumber</label>
+                                <input type="text" name="phoneNumber" class="form-control" id="lname"
+                                    placeholder="PhoneNumber" required="">
+                            </div>
 
                             <button type="submit" style="margin-left: 0.7rem" class="btn btn-solid w-auto">CREATE AN
                                 ACCOUNT</button>
