--- a/views/order/checkout.hbs
+++ b/views/order/checkout.hbs
@@ -29,22 +29,22 @@
                                 <h3>Billing Details</h3>
                             </div>
                             <div class="row check-out">
-                                <div class="form-group col-md-6 col-sm-6 col-xs-12">
+                                {{!-- <div class="form-group col-md-6 col-sm-6 col-xs-12">
                                     <div class="field-label">First Name</div>
                                     <input type="text" name="field-name" value="" placeholder="">
-                                </div>
-                                <div class="form-group col-md-6 col-sm-6 col-xs-12">
+                                </div> --}}
+                                {{!-- <div class="form-group col-md-6 col-sm-6 col-xs-12">
                                     <div class="field-label">Last Name</div>
                                     <input type="text" name="field-name" value="" placeholder="">
-                                </div>
-                                <div class="form-group col-md-6 col-sm-6 col-xs-12">
+                                </div> --}}
+                                {{!-- <div class="form-group col-md-6 col-sm-6 col-xs-12">
                                     <div class="field-label">Total Amount</div>
                                     <input type="text" name="{{subTota}}" value="" placeholder="">
-                                </div>
-                                <div class="form-group col-md-6 col-sm-6 col-xs-12">
+                                </div> --}}
+                                {{!-- <div class="form-group col-md-6 col-sm-6 col-xs-12">
                                     <div class="field-label">Payment Method</div>
                                     <input type="Number" name="payment_method" value="" placeholder="">
-                                </div>
+                                </div> --}}
                                 {{!-- <div class="form-group col-md-12 col-sm-12 col-xs-12">
                                     <div class="field-label">Country</div>
                                     <select>
@@ -58,18 +58,7 @@
                                     <div class="field-label">Address</div>
                                     <input type="text" name="field-name" value="" placeholder="Street address">
                                 </div>
-                                <div class="form-group col-md-12 col-sm-12 col-xs-12">
-                                    <div class="field-label">Town/City</div>
-                                    <input type="text" name="field-name" value="" placeholder="">
-                                </div>
-                                <div class="form-group col-md-12 col-sm-6 col-xs-12">
-                                    <div class="field-label">State / County</div>
-                                    <input type="text" name="field-name" value="" placeholder="">
-                                </div>
-                                <div class="form-group col-md-12 col-sm-6 col-xs-12">
-                                    <div class="field-label">Postal Code</div>
-                                    <input type="text" name="field-name" value="" placeholder="">
-                                </div>
+                                
                                 <div class="form-group col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                     <input type="checkbox" name="shipping-option" id="account-option">  
                                     <label for="account-option">Create An Account?</label>
@@ -79,15 +68,19 @@
                         <div class="col-lg-6 col-sm-12 col-xs-12">
                             <div class="checkout-details">
                                 <div class="order-box">
+                                   
                                     <div class="title-box">
                                         <div>Product <span>Total</span></div>
                                     </div>
+                                      {{#each cartItems}}
                                     <ul class="qty">
-                                        <li>Pink Slim Shirt × 1 <span>$25.10</span></li>
-                                        <li>SLim Fit Jeans × 1 <span>$555.00</span></li>
+                                       
+                                        <li>{{name}} <span>{{price}}</span></li>
+                                       
                                     </ul>
+                                    {{/each }}
                                     <ul class="sub-total">
-                                        <li>Subtotal <span class="count">$380.10</span></li>
+                                        <li>Subtotal <span class="count"></span></li>
                                         <li>Shipping
                                             <div class="shipping">
                                                 <div class="shopping-option">
@@ -104,6 +97,7 @@
                                     <ul class="total">
                                         <li>Total <span class="count">$620.00</span></li>
                                     </ul>
+                                     
                                 </div>
                                 <div class="payment-box">
                                     <form id="payment-form">
