payment succesful done,session refactored

--- a/views/auth/register.hbs
+++ b/views/auth/register.hbs
@@ -31,8 +31,8 @@
                             </div>
                             <div class="col-md-6">
                                 <label>address</label>
-                                <input type="text" name="address" class="form-control" id="lname"
-                                    placeholder="Address" required="">
+                                <textarea class="form-control mb-0" name="address" class="form-control" id="lname"
+                                    placeholder="Address" required=""></textarea>
                             </div>
                             <div class="col-md-6">
                                 <label>phoneNumber</label>
