--- a/views/product/view-cart.hbs
+++ b/views/product/view-cart.hbs
@@ -48,7 +48,7 @@
                                     </div>
                                 </td>
                                 <td>
-                                    <h2>{{price}}</h2>
+                                    <h2>{{price}}€</h2>
                                 </td>
                                 <td>
                                     <div class="qty-box">
@@ -59,7 +59,7 @@
                                 </td>
                                 <td><a href="#" class="icon"><i class="ti-close"></i></a></td>
                                 <td>
-                                    <h2 class="td-color">{{price}}</h2>
+                                    <h2 class="td-color">{{price}}€</h2>
                                 </td>
                             </tr>
                             {{/each}}
