--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -35,6 +35,8 @@
   <!-- Theme css -->
   <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
 
+  <!-- custom css -->
+  <link rel="stylesheet" type="text/css" href="/assets/css/custom.css">
 
 </head>
 
