--- a/views/order/checkout.hbs
+++ b/views/order/checkout.hbs
@@ -9,7 +9,7 @@
             <div class="col-sm-6">
                 <nav aria-label="breadcrumb" class="theme-breadcrumb">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                        <li class="breadcrumb-item"><a href="/">Home</a></li>
                         <li class="breadcrumb-item active" aria-current="page">Check-out</li>
                     </ol>
                 </nav>
@@ -25,10 +25,47 @@
                 <form action="/order/checkout" method="post">
                     <div class="row">
                         <div class="col-lg-6 col-sm-12 col-xs-12">
-                            <div class="checkout-title">
+                            {{!-- <div class="checkout-title">
                                 <h3>Billing Details</h3>
-                            </div>
-                            <div class="row check-out">
+                            </div> --}}
+                            <div class="checkout-details">
+                                <div class="order-box">
+                                    <div class="title-box">
+                                        <div>Delivery address</div>
+                                    </div>
+                                    <ul class="qty">
+                                        <li>{{currentUser.address}}</li>
+                                    </ul>
+                                </div>
+                                <div class="order-box">
+                                    <div class="title-box">
+                                        <div>Product <span>Total</span></div>
+                                    </div>
+                                    {{#each cartItems}}
+                                    <ul class="qty">
+                                        <li>{{name}} <span>{{price}}€</span></li>
+                                    </ul>
+                                    {{/each }}
+                                    <ul class="sub-total">
+                                        {{!-- <li>Subtotal <span class="count"></span></li> --}}
+                                        {{!-- <li>Shipping
+                                            <div class="shipping">
+                                                <div class="shopping-option">
+                                                    <input type="checkbox" name="free-shipping" id="free-shipping">
+                                                    <label for="free-shipping">Free Shipping</label>
+                                                </div>
+                                                <div class="shopping-option">
+                                                    <input type="checkbox" name="local-pickup" id="local-pickup">
+                                                    <label for="local-pickup">Local Pickup</label>
+                                                </div>
+                                            </div>
+                                        </li> --}}
+                                    </ul>
+                                    <ul class="total">
+                                        <li>Total <span class="count">{{subTotal}}€</span></li>
+                                    </ul>
+
+                                </div>
                                 {{!-- <div class="form-group col-md-6 col-sm-6 col-xs-12">
                                     <div class="field-label">First Name</div>
                                     <input type="text" name="field-name" value="" placeholder="">
@@ -54,11 +91,8 @@
                                         <option>Australia</option>
                                     </select>
                                 </div> --}}
-                                <div class="form-group col-md-12 col-sm-12 col-xs-12">
-                                   {{currentUser.address}}
-                                   
-                                </div>
-{{!--                                 
+                                
+                                {{!--
                                 <div class="form-group col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                     <input type="checkbox" name="shipping-option" id="account-option">  
                                     <label for="account-option">Create An Account?</label>
@@ -68,36 +102,15 @@
                         <div class="col-lg-6 col-sm-12 col-xs-12">
                             <div class="checkout-details">
                                 <div class="order-box">
-                                   
+
                                     <div class="title-box">
-                                        <div>Product <span>Total</span></div>
+                                        <div>Order Summary</div>
                                     </div>
-                                      {{#each cartItems}}
-                                    <ul class="qty">
-                                       
-                                        <li>{{name}} <span>{{price}}€</span></li>
-                                       
-                                    </ul>
-                                    {{/each }}
-                                    <ul class="sub-total">
-                                        {{!-- <li>Subtotal <span class="count"></span></li> --}}
-                                        <li>Shipping
-                                            <div class="shipping">
-                                                <div class="shopping-option">
-                                                    <input type="checkbox" name="free-shipping" id="free-shipping">
-                                                    <label for="free-shipping">Free Shipping</label>
-                                                </div>
-                                                <div class="shopping-option">
-                                                    <input type="checkbox" name="local-pickup" id="local-pickup">
-                                                    <label for="local-pickup">Local Pickup</label>
-                                                </div>
-                                            </div>
-                                        </li>
-                                    </ul>
+
                                     <ul class="total">
                                         <li>Total <span class="count">{{subTotal}}€</span></li>
                                     </ul>
-                                     
+
                                 </div>
                                 <div class="payment-box">
                                     <form id="payment-form">
@@ -119,7 +132,8 @@
                                             </div>
                                         </div>
                                         <div class="text-end">
-                                            <button id="submit" onclick="handleSubmit('test@gmail.com')" class="btn-solid btn">
+                                            <button id="submit" onclick="handleSubmit('test@gmail.com')"
+                                                class="btn-solid btn">
                                                 <div class="spinner hidden" id="spinner"></div>
                                                 Place Order
                                             </button>
