--- a/views/product/delete.hbs
+++ b/views/product/delete.hbs
@@ -1,4 +1,52 @@
-<h5>Are you sure, you want to delete this product</h5>
+{{!-- <h5>Are you sure, you want to delete this product</h5>
 <form action="/product/{{id}}/delete" method="post">
      <button type="submit" class="btn btn-solid">Delete</button>
- </form>
+ </form> --}}
+ <div class="breadcrumb-section">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="page-title">
+          <h2>Create a Product</h2>
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <nav aria-label="breadcrumb" class="theme-breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="/">Home</a></li>
+            <li class="breadcrumb-item active">Login</li>
+          </ol>
+        </nav>
+      </div>
+    </div>
+  </div>
+</div>
+<form action="/product/{{id}}/delete" method="post">
+<div class="">
+  <div class="media">
+    <a href="#">
+
+    </a>
+    <div class="media-body align-self-center text-center">
+      <a href="#">
+
+        <div class="mt-5 alert alert-success" role="alert" style="margin-left:35%; margin-right:35%">
+          <h4 class="alert-heading"><b><i class="fa fa-check"></i> Are you sure, you want to delete this product</b></h4>
+          {{!-- <h5>
+            <span> Payment successful</span>
+          </h5> --}}
+        </div>
+
+      </a>
+      {{!-- <div class="buttons mb-5">
+        <a href="/product/view-cart" class="view-cart btn btn-solid">Your cart</a>
+        <a href="/order/checkout" class="checkout btn btn-solid mx-4">Check out</a>
+        <a href="/product" class="continue btn btn-solid">Continue shopping</a>
+      </div> --}}
+
+  <button type="submit" class="btn btn-solid">Delete</button>
+    </div>
+  </div>
+</div>
+   
+ </form> 
