--- a/views/product/view.hbs
+++ b/views/product/view.hbs
@@ -9,7 +9,7 @@
       <div class="col-sm-6">
         <nav aria-label="breadcrumb" class="theme-breadcrumb">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+            <li class="breadcrumb-item"><a href="/">Home</a></li>
             <li class="breadcrumb-item active" aria-current="page">product</li>
           </ol>
         </nav>
@@ -34,17 +34,17 @@
                     </div>
                   </div>
                 </div>
-                
+
               </div>
             </div><button class="slick-next slick-arrow" aria-label="Next" type="button"
               style="display: block;">Next</button>
           </div>
-         
-          
+
+
         </div>
         <div class="col-lg-6 rtl-text">
           <div class="product-right">
-            
+
             <h2>{{product.name}}</h2>
 
 
@@ -55,15 +55,15 @@
             <h3 class="price-detail">{{product.price}}€ </h3>
             <div class="border-product">
               <h6 class="product-title">Discount</h6>
-              <div >
+              <div>
                 {{product.discount}}%
               </div>
             </div>
-            
+
             <div id="selectSize" class="addeffect-section product-description border-product">
-              <h6 class="product-title size-text">Dimension 
-                    </h6>
-              
+              <h6 class="product-title size-text">Dimension
+              </h6>
+
               <h6 class="error-message">please select size</h6>
               <div class="size-box">
                 <div>{{product.dimensions}}</div>
@@ -82,24 +82,24 @@
             <div class="product-buttons"><a href="/product/add-to-cart/{{product.id}}" id="cartEffect"
                 class="btn btn-solid hover-solid btn-animation"><i class="fa fa-shopping-cart me-1"
                   aria-hidden="true"></i> add to cart</a> </div>
-            
+
             <div class="border-product">
               <h6 class="product-title">Description</h6>
-              <div >
+              <div>
                 {{product.description}}
               </div>
             </div>
 
             <div class="border-product">
               <h6 class="product-title">Material</h6>
-              <div >
+              <div>
                 {{product.material}}
               </div>
             </div>
             <div class="border-product">
               <h6 class="product-title">care instructions</h6>
-              <div >
-               {{product.care_instructions}}
+              <div>
+                {{product.care_instructions}}
               </div>
             </div>
             <div class="border-product">
@@ -107,32 +107,19 @@
               <ul class="shipping-info">
                 <li>100% Original Products</li>
                 <li>Free Delivery on order above 50€</li>
-                
+
                 <li>Easy 30 days returns and exchanges</li>
               </ul>
             </div>
-           
-
             <div class="border-product">
-
-
- <div class="row">
-          <div class="col-lg-3">
-            <div class="form-group">
-      
-             <button>
-<a class="btn btn-solid w-auto" href="/product/{{product.id}}/edit">Edit</a>
-             </button> 
-      
-             <button>
-<a class="btn btn-solid w-auto" href="/product/{{product.id}}/delete">Delete</a>
-             </button> 
-
-         </div>
-          </div>
-        </div>
-
-
+              <div class="row">
+                <div class="col-lg-12">
+                  <div class="form-group">
+                    <a class="btn btn-solid" href="/product/{{product.id}}/edit">Edit</a>
+                    <a class="btn btn-solid" href="/product/{{product.id}}/delete">Delete</a>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -140,5 +127,3 @@
     </div>
   </div>
 </section>
-
-
