home page pictures added

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,7 +9,7 @@
                         <div class="col">
                             <div class="slider-contain">
                                 <div>
-                                    <a href="/productproducts" class="btn btn-solid"
+                                    <a href="/product" class="btn btn-solid"
                                         style="margin-left: -9px; margin-top: 37px;">shop now</a>
                                 </div>
                             </div>
