--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -35,6 +35,9 @@
   <!-- Theme css -->
   <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
 
+  <link rel="stylesheet" type="text/css" href="/assets/css/custom.css">
+
+
 
 </head>
 
@@ -145,7 +148,7 @@
                     {{#each cartItems}}
                     <li>
                       <div class="media">
-                        <a href="#"><img alt="" class="me-3" src="{{image}}"></a>
+                        <a href=""><img alt="" class="me-3" src="{{image}}"></a>
                         <div class="media-body">
                           <a href="#">
                             <h4>{{name}}</h4>
@@ -225,6 +228,7 @@
     </div>
   </div>
 </div>
+<hr style="margin-top: -0.1rem">
 </header>
 <!-- End of Header -->
   {{{body}}}
