--- a/views/product/add-to-cart.hbs
+++ b/views/product/add-to-cart.hbs
@@ -1,11 +1,11 @@
-<div class="media">
+{{!-- <div class="media">
   {{!-- <h6>
     <i class="fa fa-check"></i>Item
     <span>Items Count:{{cartItems.length}}</span>
     <span> successfully added to your Cart</span>
   </h6> --}}
 
-  <div class="buttons">
+  {{!-- <div class="buttons">
     <a href="#" class="view-cart btn btn-solid">Your cart</a>
     <a href="#" class="checkout btn btn-solid">Check out</a>
     <a href="#" class="continue btn btn-solid">Continue shopping</a>
@@ -15,4 +15,4 @@
     <img src="/assets/images/payment_cart.png" class="img-fluid blur-up lazyload" alt="">
   </div>
 </div>
-</div>
+</div>  --}}
