--- a/views/product/allproduct.hbs
+++ b/views/product/allproduct.hbs
@@ -1,22 +1,4 @@
-<div class="breadcrumb-section">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-6">
-        <div class="page-title">
-          <h2>ALL Products</h2>
-        </div>
-      </div>
-      <div class="col-sm-6">
-        <nav aria-label="breadcrumb" class="theme-breadcrumb">
-          <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="/">Home</a></li>
-            <li class="breadcrumb-item active"><a href="/product">All Products</a></li>
-          </ol>
-        </nav>
-      </div>
-    </div>
-  </div>
-</div>
+
 <section class="section-b-space ratio_asos">
     <div class="collection-wrapper">
         <div class="container">
@@ -31,9 +13,10 @@
                             <h3 class="collapse-block-title">All Categories</h3>
                             <div class="collection-collapse-block-content">
                                 <div class="collection-brand-filter">
+                                      
                                     <div class="form-check collection-filter-checkbox">
                                         <input type="checkbox" class="form-check-input" id="decor">
-                                        <label class="form-check-label" for="zara">Decorations</label>
+                                        <label class="form-check-label" for="Decorations">Decorations</label>
                                     </div>
                                     <div class="form-check collection-filter-checkbox">
                                         <input type="checkbox" class="form-check-input" id="cushion">
@@ -50,62 +33,33 @@
                                     <div class="form-check collection-filter-checkbox">
                                         <input type="checkbox" class="form-check-input" id="linen">
                                         <label class="form-check-label" for="only">Linen</label>
+                                       
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <!-- color filter start here -->
-                        <div class="collection-collapse-block open">
-                            <h3 class="collapse-block-title">colors</h3>
-                            <div class="collection-collapse-block-content">
-                                <div class="color-selector">
-                                    <ul>
-                                        <li class="color-1 active"></li>
-                                        <li class="color-2"></li>
+                         </div>
 
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- size filter start here -->
-                        <div class="collection-collapse-block border-0 open">
-                            <h3 class="collapse-block-title">brands</h3>
-                            <div class="collection-collapse-block-content">
-                                <div class="collection-brand-filter">
-                                    <div class="form-check collection-filter-checkbox">
-                                        <input type="checkbox" class="form-check-input" id="hundred">
-                                        <label class="form-check-label" for="hundred">Hasta</label>
-                                    </div>
-                                    <div class="form-check collection-filter-checkbox">
-                                        <input type="checkbox" class="form-check-input" id="twohundred">
-                                        <label class="form-check-label" for="twohundred">Usea</label>
-                                    </div>
-                                    <div class="form-check collection-filter-checkbox">
-                                        <input type="checkbox" class="form-check-input" id="threehundred">
-                                        <label class="form-check-label" for="threehundred">Arket</label>
-                                    </div>
-                                    <div class="form-check collection-filter-checkbox">
-                                        <input type="checkbox" class="form-check-input" id="fourhundred">
-                                        <label class="form-check-label" for="fourhundred">Jollein</label>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+ 
+
+                        <!-- color filter start here -->
+                 
+
+
+                    
                         <!-- price filter start here -->
-                        <div class="collection-collapse-block border-0 open">
-                            <h3 class="collapse-block-title">price</h3>
-                            <div class="collection-collapse-block-content">
-                                <div class="wrapper mt-3">
-                                    <div class="range-slider">
-                                        <span class="irs js-irs-0"><span class="irs"><span class="irs-line"
-                                                    tabindex="-1"><span class="irs-line-left"></span><span
-                                                        class="irs-line-mid"></span><span
-                                                        class="irs-line-right"></span></span><span class="irs-min"
-                                                    style="visibility: hidden;">$0</span><span class="irs-max"
-                                                    style="visibility: hidden;">$1.500</span><span class="irs-from"
-                                                    style="visibility: visible; left: 0%;">$0</span><span class="irs-to"
-                                                    style="visibility: visible; left: 83.3333%;">$1.500</span><span
-                                                    class="irs-single" style="visibility: hidden; left: 36.7424%;">$0 -
+    {{!-- <div class="collection-collapse-block border-0 open">
+      <h3 class="collapse-block-title">price</h3>
+        <div class="collection-collapse-block-content">
+         <div class="wrapper mt-3">
+          <div class="range-slider">
+           <span class="irs js-irs-0"><span class="irs"><span class="irs-line" tabindex="-1"><span class="irs-line-left"></span><span
+                class="irs-line-mid"></span> 
+                <spanclass="irs-line-right"></span></span><span class="irs-min" 
+                                              style="visibility: hidden;">$0</span><span class="irs-max"
+                                               style="visibility: hidden;">$1.500</span><span class="irs-from"
+                                                style="visibility: visible; left: 0%;">$0</span><span class="irs-to"
+                                                 style="visibility: visible; left: 83.3333%;">$1.500</span><span
+                                                class="irs-single" style="visibility: hidden; left: 36.7424%;">$0 -
                                                     $1.500</span></span><span class="irs-grid"></span><span
                                                 class="irs-bar" style="left: 1.51515%; width: 96.9697%;"></span><span
                                                 class="irs-shadow shadow-from" style="display: none;"></span><span
@@ -116,10 +70,16 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> --}}
                     </div>
+
+
+
                     <!-- silde-bar colleps block end here -->
                     <!-- side-bar single product slider start -->
+
+
+
                     <div class="theme-card">
                         <h5 class="title-border">new product</h5>
                         <div class="offer-slider slide-1 slick-initialized slick-slider"><button
@@ -386,6 +346,10 @@
                     </div>
                     <!-- side-bar banner end here -->
                 </div>
+
+
+
+    
                 <div class="collection-content col">
                     <div class="page-main-content">
                         <div class="row">
@@ -396,13 +360,14 @@
                                     <div class="top-banner-content small-section">
                                         <h4>BIGGEST DEALS ON TOP BRANDS</h4>
                                         <p>Stylio has
-                                            eye-catching products from top brands, we also offer an
+                                             eye-catching products from top brands, we also offer an
                                             easy 30-day return and exchange policy, free and fast shipping across
                                             all pin codes, cash or card on delivery option, deals and discounts,
                                             among other perks. So, sign up now and shop for westarn wear to your
                                             heart’s content on Multikart. </p>
                                     </div>
                                 </div>
+                
                                 <div class="collection-product-wrapper">
                                     <div class="product-top-filter">
                                         <div class="row">
@@ -456,7 +421,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
+                                   </div>
 
 
 
@@ -483,9 +448,8 @@
                                                                     style="display: none;"></a>
                                                         </div>
                                                         <div class="cart-info cart-wrap">
-                                                            <button data-bs-toggle="modal" data-bs-target="#addtocart"
-                                                                title="Add to cart"><i
-                                                                    class="ti-shopping-cart"></i></button> <a
+                                                            <button  data-bs-toggle="modal" data-bs-target="#addtocart"
+                                                                title="Add to cart"><i class="bi bi-box-arrow-in-left"></i></button> <a
                                                                 href="javascript:void(0)" title="Add to Wishlist"><i
                                                                     class="ti-heart" aria-hidden="true"></i></a> <a
                                                                 href="#" data-bs-toggle="modal"
@@ -501,6 +465,7 @@
                                                                     class="fa fa-star"></i> <i class="fa fa-star"></i>
                                                                 <i class="fa fa-star"></i> <i class="fa fa-star"></i>
                                                             </div>
+                                                           
                                                             <a href="/product/view/{{_id}}">
                                                                 <h6>{{name}}</h6>
                                                             </a>
@@ -515,19 +480,8 @@
                                                     </div>
                                                 </div>
                                             </div>
+
                                             {{/each}}
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-                                            <li><a href="/product/{{allProductsDB.id}}/edit">Edit</a></li>
-=======
-                                             <li><a href="/product/{{allProductsDB.id}}/edit">Edit</a></li>
->>>>>>> 9dbd2d3 (edit and delete)
-=======
->>>>>>> 641dc79 (little changes on routes)
-=======
-                                             <li><a href="/product/{{allProductsDB.id}}">Edit</a></li>
->>>>>>> ac8e25c (Nothing new)
                                         </div>
                                     </div>
                                     <div class="product-pagination">
@@ -558,6 +512,7 @@
                                                 <div class="col-xl-6 col-md-6 col-sm-12">
                                                     <div class="product-search-count-bottom">
                                                         <h5>Showing Products 1-24 of 10 Result</h5>
+                                                     </div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -570,5 +525,4 @@
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
