--- a/views/category/view-details.hbs
+++ b/views/category/view-details.hbs
@@ -882,7 +882,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div
                 </div>
             </div>
         </div>
