--- a/views/order/checkout.hbs
+++ b/views/order/checkout.hbs
@@ -29,22 +29,21 @@
                                 <h3>Billing Details</h3>
                             </div>
                             <div class="row check-out">
-                                <div class="form-group col-md-6 col-sm-6 col-xs-12">
-                                    <div class="field-label">First Name</div>
-                                    <input type="text" name="field-name" value="" placeholder="">
+                                {{!-- <div class="form-group col-md-6 col-sm-6 col-xs-12">
+                                    <select class="field-label">First Name
+                                    {{#each userBuIdDB}}
+                                    <option value="{{this._id}}">{{this.firstName}}</option> 
+                                    {{/each}}
+                                    </select>
                                 </div>
-                                <div class="form-group col-md-6 col-sm-6 col-xs-12">
-                                    <div class="field-label">Last Name</div>
-                                    <input type="text" name="field-name" value="" placeholder="">
-                                </div>
-                                <div class="form-group col-md-6 col-sm-6 col-xs-12">
-                                    <div class="field-label">Total Amount</div>
-                                    <input type="text" name="{{subTota}}" value="" placeholder="">
-                                </div>
-                                <div class="form-group col-md-6 col-sm-6 col-xs-12">
-                                    <div class="field-label">Payment Method</div>
-                                    <input type="Number" name="payment_method" value="" placeholder="">
-                                </div>
+                               <div class="form-group col-md-6 col-sm-6 col-xs-12">
+                                    <select class="field-label">First Name
+                                    {{#each userBuIdDB}}
+                                    <option value="{{this._id}}">{{this.lastName}}</option> 
+                                    {{/each}}
+                                    </select>
+                                </div> --}}
+                               
                                 {{!-- <div class="form-group col-md-12 col-sm-12 col-xs-12">
                                     <div class="field-label">Country</div>
                                     <select>
@@ -83,11 +82,12 @@
                                         <div>Product <span>Total</span></div>
                                     </div>
                                     <ul class="qty">
-                                        <li>Pink Slim Shirt × 1 <span>$25.10</span></li>
+                                        
+                                        <li>{{pro}}<span>$25.10</span></li>
                                         <li>SLim Fit Jeans × 1 <span>$555.00</span></li>
                                     </ul>
                                     <ul class="sub-total">
-                                        <li>Subtotal <span class="count">$380.10</span></li>
+                                        <li>Subtotal <span class="count">{{subTotal}}</span></li>
                                         <li>Shipping
                                             <div class="shipping">
                                                 <div class="shopping-option">
