--- a/views/product/create.hbs
+++ b/views/product/create.hbs
@@ -27,7 +27,7 @@
           <div class="col-lg-3">
             <div class="form-group">
               <label for="text">Product Name</label>
-              <input type="text" name="name" value="Testfdfddfd" class="form-control" id="product-name" placeholder="Enter product name"
+              <input type="text" name="name"  class="form-control" id="product-name" placeholder="Enter product name"
                 required="">
             </div>
           </div>
