--- a/views/product/delete.hbs
+++ b/views/product/delete.hbs
@@ -1,10 +1,38 @@
-<<<<<<< HEAD
-<h5>Are you sure, you want to delete this product</h5>
-=======
 
-<h1>Are you sure, you want to delete this product</h1>
->>>>>>> 9dbd2d3 (edit and delete)
-<form action="/product/{{id}}/delete" method="post">
-     <button type="submit" class="btn btn-solid">Delete</button>
- </form>
- <a class="btn btn-solid w-auto" href="/product/allproduct">No</a>
+  <div class="modal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Modal body text goes here.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+  
+  
+  <div class="border-product">
+
+
+ <div class="row">
+          <div class="col-lg-3">
+            <div class="form-group" style="display:flex; justify-content: space-evenly; margin-left: 5rem;">
+      
+    <form action="/product/{{id}}/delete" method="post">
+  <div class="col-6"><a href="/product/{{id}}/delete" class="btn btn-solid">Delete</a></div>
+</form>
+     <div class="col-6"><a href="/product" class="btn btn-solid">continue shopping</a></div>
+
+</div>
+          </div>
+        </div>
+
