--- a/views/product/edit-product.hbs
+++ b/views/product/edit-product.hbs
@@ -1,3 +1,4 @@
+
 <div class="breadcrumb-section">
   <div class="container">
     <div class="row">
@@ -19,15 +20,7 @@
 </div>
 
 <section class="register-page section-b-space">
-<<<<<<< HEAD
-<<<<<<< HEAD
-  <form action="/product/{{productByIdDB._id}}/edit" method="POST" enctype="multipart/form-data">
-=======
-  <form action="/product/{{productUpdate._id}}/edit" method="POST" enctype="multipart/form-data">
->>>>>>> d486861 (edit done)
-=======
-  <form action="/product/{{productByIdDB._id}}/edit" method="POST" enctype="multipart/form-data">
->>>>>>> 9dbd2d3 (edit and delete)
+  <form  action="/product/{{productByIdDB.id}}/edit" method="POST" enctype="multipart/form-data">
     <div class="container">
       <h3>Product Details</h3>
       <div class="theme-card">
@@ -35,15 +28,7 @@
           <div class="col-lg-3">
             <div class="form-group">
               <label for="text">Product Name</label>
-<<<<<<< HEAD
-<<<<<<< HEAD
-              <input type="text" name="name" class="form-control" id="product-name" value="{{productByIdDB.name}}"
-=======
-              <input type="text" name="name" class="form-control" id="product-name" value="{{productUpdate.name}}"
->>>>>>> d486861 (edit done)
-=======
-              <input type="text" name="name" class="form-control" id="product-name" value="{{productByIdDB.name}}"
->>>>>>> 9dbd2d3 (edit and delete)
+                <input type="text" name="name" class="form-control" id="product-name" value="{{productByIdDB.name}}"
                 required="">
             </div>
           </div>
@@ -51,27 +36,15 @@
             <div class="form-group">
               <label for="review">Product Price </label>
               <input type="text" name="price" class="form-control" id="review"
-<<<<<<< HEAD
-<<<<<<< HEAD
                 value="{{productByIdDB.price}}" required="">
-=======
-                value="{{productUpdate.price}}" required="">
->>>>>>> d486861 (edit done)
-=======
-                value="{{productByIdDB.price}}" required="">
->>>>>>> 9dbd2d3 (edit and delete)
             </div>
           </div>
           <div class="col-lg-2">
             <div class="form-group">
               <label for="review">Product Category</label>
               <select name="product_category" class="form-control">
-<<<<<<< HEAD
                 {{#each categories}}
-=======
-                {{#each categoryListDB}}
->>>>>>> d486861 (edit done)
-                <option value="{{this._id}}">{{this.name}}</option>
+               <option value="{{this._id}}">{{this.name}}</option>
                 {{/each}}
               </select>
             </div>
@@ -80,29 +53,13 @@
             <div class="form-group">
               <label for="review">Product Dimension</label>
               <input type="text" name="dimension" class="form-control" id="review"
-<<<<<<< HEAD
-<<<<<<< HEAD
                 value="{{productByIdDB.dimension}}" required="">
-=======
-                value="{{productUpdate.dimension}}" required="">
->>>>>>> d486861 (edit done)
-=======
-                value="{{productByIdDB.dimension}}" required="">
->>>>>>> 9dbd2d3 (edit and delete)
             </div>
           </div>
           <div class="col-lg-2">
             <div class="form-group">
               <label for="text">Product Material</label>
-<<<<<<< HEAD
-<<<<<<< HEAD
               <input type="text" name="material" class="form-control" id="product-name" value="{{productByIdDB.material}}"
-=======
-              <input type="text" name="material" class="form-control" id="product-name" value="{{productUpdate.material}}"
->>>>>>> d486861 (edit done)
-=======
-              <input type="text" name="material" class="form-control" id="product-name" value="{{productByIdDB.material}}"
->>>>>>> 9dbd2d3 (edit and delete)
                 required="">
             </div>
           </div>
@@ -123,60 +80,28 @@
           <div class="col-lg-3">
             <div class="form-group">
               <label for="review">Color</label>
-<<<<<<< HEAD
-<<<<<<< HEAD
               <input type="text" name="color" class="form-control" id="product" value="{{productByIdDB.color}}"
-=======
-              <input type="text" name="color" class="form-control" id="product" value="{{productUpdate.color}}"
->>>>>>> d486861 (edit done)
-=======
-              <input type="text" name="color" class="form-control" id="product" value="{{productByIdDB.color}}"
->>>>>>> 9dbd2d3 (edit and delete)
                 required="">
             </div>
           </div>
           <div class="col-lg-3 select_input">
             <div class="form-group">
               <label for="review">Product Image</label>
-              <input type="file" name="product-image-cover" class="form-control" id="product"
-<<<<<<< HEAD
-<<<<<<< HEAD
+              <input type="file" name="image" class="form-control" id="product"
                 value="{{productByIdDB.image}}" required="">
-=======
-                value="{{productUpdate.image}}" required="">
->>>>>>> d486861 (edit done)
-=======
-                value="{{productByIdDB.image}}" required="">
->>>>>>> 9dbd2d3 (edit and delete)
             </div>
           </div>
           <div class="col-lg-2">
             <div class="form-group">
               <label for="text">Product Brand</label>
               <input type="text" name="brand_name" class="form-control" id="product"
-<<<<<<< HEAD
-<<<<<<< HEAD
                 value="{{productByIdDB.brand_name}}" required="">
-=======
-                value="{{productUpdate.brand_name}}" required="">
->>>>>>> d486861 (edit done)
-=======
-                value="{{productByIdDB.brand_name}}" required="">
->>>>>>> 9dbd2d3 (edit and delete)
             </div>
           </div>
           <div class="col-lg-2">
             <div class="form-group">
               <label for="text">Quantity</label>
-<<<<<<< HEAD
-<<<<<<< HEAD
               <input type="text" name="quantity" class="form-control" id="product" value="{{productByIdDB.quantity}}"
-=======
-              <input type="text" name="quantity" class="form-control" id="product" value="{{productUpdate.quantity}}"
->>>>>>> d486861 (edit done)
-=======
-              <input type="text" name="quantity" class="form-control" id="product" value="{{productByIdDB.quantity}}"
->>>>>>> 9dbd2d3 (edit and delete)
                 required="">
             </div>
           </div>
@@ -184,15 +109,7 @@
           <div class="col-lg-2">
             <div class="form-group">
               <label for="text">Discount</label>
-<<<<<<< HEAD
-<<<<<<< HEAD
               <input type="text" name="discount" class="form-control" id="product-name" value="{{productByIdDB.discount}}"
-=======
-              <input type="text" name="discount" class="form-control" id="product-name" value="{{productUpdate.discount}}"
->>>>>>> d486861 (edit done)
-=======
-              <input type="text" name="discount" class="form-control" id="product-name" value="{{productByIdDB.discount}}"
->>>>>>> 9dbd2d3 (edit and delete)
                 required="">
             </div>
           </div>
@@ -201,18 +118,8 @@
           <div class="col-lg-12 py-2">
             <div class="form-group">
               <label for="review">Product Description</label>
-<<<<<<< HEAD
-<<<<<<< HEAD
               <textarea class="form-control mb-0" name="description" 
-                id="exampleFormControlTextarea1" rows="6">{{productByIdDB.description}}</textarea> 
-=======
-              <textarea class="form-control mb-0" name="description" value="{{productUpdate.description}}"
-                id="exampleFormControlTextarea1" rows="6"></textarea>
->>>>>>> d486861 (edit done)
-=======
-              <textarea class="form-control mb-0" name="description" 
-                id="exampleFormControlTextarea1" rows="6">{{productByIdDB.description}}</textarea> 
->>>>>>> 9dbd2d3 (edit and delete)
+                id="exampleFormControlTextarea1" rows="6">{{productByIdDB.description}}</textarea>
             </div>
           </div>
         </div>
@@ -220,29 +127,17 @@
           <div class="col-lg-12 py-2">
             <div class="form-group">
               <label for="review">Product Care Instructions</label>
-<<<<<<< HEAD
-<<<<<<< HEAD
-              <textarea class="form-control mb-0" name="care_instructions" 
-                id="exampleFormControlTextarea1" rows="6">{{productByIdDB.care_instructions}}</textarea>
-=======
-              <textarea class="form-control mb-0" name="care_instructions" value="{{productUpdate.care_instructions}}"
-                id="exampleFormControlTextarea1" rows="6"></textarea>
->>>>>>> d486861 (edit done)
-=======
-              <textarea class="form-control mb-0" name="care_instructions" 
-                id="exampleFormControlTextarea1" rows="6">{{productByIdDB.care_instructions}}</textarea>
->>>>>>> 9dbd2d3 (edit and delete)
+              <textarea class="form-control mb-0" name="care_instructions" placeholder="Enter Product Care Instructions"
+                id="exampleFormControlTextarea1" rows="6">{{productByIdDB.care_instruction}}</textarea>
             </div>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-3">
             <div class="form-group">
-              {{!-- {{#if status}}
-              <p>{{status}}</p>
-              {{/if}} --}}
-              <button type="submit" class="btn btn-solid">CREATE</button>
+             <button type="submit" class="btn btn-solid">CREATE</button>
               <button type="submit" class="btn btn-solid w-auto">Reset</button>
+            </div>
             </div>
           </div>
         </div>
@@ -253,3 +148,28 @@
     </div>
   </form>
 </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
