profile icon added

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -62,7 +62,7 @@
               <li class="onhover-dropdown mobile-account"><i class="fa fa-user" aria-hidden="true"></i>
                 Welcome {{currentUser.firstName}}
                 <ul class="onhover-show-div">
-                  {{!-- <li><a href="/order/cart">Cart</a></li> --}}
+                  <li><a href="/auth/profile">Profile</a></li>
                   <li>
                     <form action="auth/logout" method="post">
                       <a href="/auth/logout">Logout</a>
