--- a/views/product/view.hbs
+++ b/views/product/view.hbs
@@ -115,8 +115,10 @@
               <div class="row">
                 <div class="col-lg-12">
                   <div class="form-group">
+                                {{#ifEquals currentUser.userType "admin"}}
                     <a class="btn btn-solid" href="/product/{{product.id}}/edit">Edit</a>
                     <a class="btn btn-solid" href="/product/{{product.id}}/delete">Delete</a>
+                    {{/ifEquals}}
                   </div>
                 </div>
               </div>
