profil pre done

--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -85,7 +85,7 @@
                                             <img src="../assets/images/icon/dashboard/homework.png" class="img-fluid">
                                             <div>
                                                 
-                                                <h3>{{subTotal.length}}</h3>
+                                                <h3>{{subTotal}}</h3>
     
                                                 <h5>Pending Orders</h5>
                                             </div>
